fixed issue where a was offset so click a link off centre could lead to the wrong page being requested

--- a/components/Layout/Dropdown/dropdown.module.css
+++ b/components/Layout/Dropdown/dropdown.module.css
@@ -15,10 +15,17 @@
 
 .link a, .link p {
   color: var(--color-primary-500);
-  font-size: var(--size-6);
-  line-height: var(--size-6);
-  padding: 1rem;
+  font-size: 1.5rem;
+  line-height: 3rem;
   text-decoration: none;
+}
+
+.link a{
+  position: relative;
+}
+
+.link p{
+  margin: 0;
 }
 
 
@@ -35,12 +42,17 @@
 }
 
 .brands{
-
+  margin-top: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 1rem;
   background-color: var(--color-grey-200);
   animation: brandDrop 300ms ease-in-out forwards;
   transform-origin: top center;
-  width: 150%;
-  margin-left: -25%;
+  width: 120%;
+  margin-left: -10%;
 }
 
 .brands a {
